# pySimpleTimers

./: LICENSE  README.md  pyproject.toml  pysimple-timers.py  simple-timers.py
src/pySimpleTimers_Ilunawoo/: pySimpleTimers
src/pysimpletimers/: timer.py
